--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,4 +8,18 @@
         <!-- CJK/RTL/FontScale etc. bleiben Material3-Defaults -->
         <!-- Falls du eine Start-Splash brauchst, später eine theme_splash anlegen -->
     </style>
+        <!-- Base application theme. -->
+        <style name="Theme.MyApp" parent="Theme.Material3.DayNight.NoActionBar">
+            <!-- Primary brand color. -->
+            <item name="colorPrimary">@color/my_light_primary</item>
+            <item name="colorPrimaryVariant">@color/my_light_primary_variant</item>
+            <item name="colorOnPrimary">@color/my_light_on_primary</item>
+            <!-- Secondary brand color. -->
+            <item name="colorSecondary">@color/my_light_secondary</item>
+            <item name="colorSecondaryVariant">@color/my_light_secondary_variant</item>
+            <item name="colorOnSecondary">@color/my_light_on_secondary</item>
+            <!-- Status bar color. -->
+            <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+            <!-- Customize your theme here. -->
+        </style>
 </resources>
